add image, change path in store

--- a/src/style/.variables.scss
+++ b/src/style/.variables.scss
@@ -32,4 +32,4 @@ $button-color: #4CAF50;
 
 // Img
 $logo: url("/logo.png");
-$bg-cover: url("/paysage.png");
+$bg-cover: url("/Laluc/harvestGrapevine.JPG");
