--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -10,7 +10,9 @@
   @if $light-theme {
     background-color: $white;
     color: $black;
-  } @else {
+  }
+
+  @else {
     background-color: $grey2;
     color: $white;
   }
@@ -32,18 +34,8 @@ body {
   padding: 0;
 }
 
-button{
+button {
   background: none;
   border: none;
   box-shadow: none;
-}
-
-#content{
-  margin-top: 80px;
-}
-
-@media screen and (max-width: 768px) {
-  #content{
-  margin-top: 5%;
-}
 }
