style change (responsive), add receipe page

--- a/src/style/.variables.scss
+++ b/src/style/.variables.scss
@@ -16,7 +16,7 @@ $primary-color: #584283;
 $secondary-color: #4E57D6;
 $white: #edede5;
 $black: #000000;
-$grey: #3c362a;
+$grey: #47453f;
 $grey2: #242424;
 
 //Color wine
