--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -13,7 +13,14 @@ nav {
     width: 100%;
     z-index: 1000;
 }
-
+#logo img{
+    height: 50px;
+    padding: 5px;
+    margin-right: 8px;
+}
+#logo #txtLogo{
+    padding-top: 5px;
+}
 div#logo a {
     letter-spacing: 5px;
     color: $white;
