--- a/src/components/animation/scrollAnimation.scss
+++ b/src/components/animation/scrollAnimation.scss
@@ -1,9 +1,14 @@
 
 .reveal{
   position: relative;
-  transform: translateY(150px);
   opacity: 0;
   transition: 1s all ease;
+}
+.top{
+  transform: translateY(150px);
+}
+.bottom{
+  transform: translateY(-150px);
 }
 
 .reveal.active{
