--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -39,3 +39,38 @@ button {
   border: none;
   box-shadow: none;
 }
+
+.container {
+  margin: 5em 7em;
+  display: block;
+  text-align: left;
+  min-height: 63.5vh;
+}
+
+.title {
+  margin-left: 2em;
+  border-left: 2.5px solid $primary-color;
+  padding-left: 5px;
+}
+
+.card {
+  margin: 3% 15% 7% 15%
+}
+
+.card-content {
+  display: flex;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+@media (max-width: 799px) {
+  .container {
+    margin: 15px;
+  }
+
+  .title {
+    margin-top: 20%;
+  }
+}
