pleins de trucs : animation, CGU, Legal notice, correction css, correction des erreurs avec TS, changement du logo et de l'image de fond

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -34,10 +34,11 @@ body {
   padding: 0;
 }
 
-button {
+button, .btn{
   background: none;
   border: none;
   box-shadow: none;
+  text-decoration: none;
 }
 
 .container {
