--- a/src/style/.variables.scss
+++ b/src/style/.variables.scss
@@ -33,3 +33,8 @@ $button-color: #4CAF50;
 // Img
 $logo: url("/logo.png");
 $bg-cover: url("/frontPage.jpg");
+
+//media
+$maxWidthMediaPhone : 399px;
+$maxWidthMedia : 999px;
+$intWidthMedia : 799px;
