--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -50,7 +50,7 @@ button,
 }
 
 .title {
-  margin-left: 2em;
+  margin-left: 2vw;
   border-left: 2.5px solid $primary-color;
   padding-left: 5px;
 }
@@ -67,12 +67,11 @@ button,
   font-weight: bold;
 }
 
-@media (max-width: $maxWidthMedia) {
+@media (max-width: $intWidthMedia) {
   .container {
-    margin: 1.5rm;
+    margin: 1vw;
   }
-
-  .title {
-    margin-top: 15%;
+  .title{
+    margin-top: 20vw;
   }
 }
